@@ -1,6 +1,12 @@
 2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
 	* ZincIdent.cs:
+	* ZincIdentBoxBase.cs:
+	* IZincIdentContainer.cs: 
+
+2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
+	* ZincIdent.cs:
 	* IZincIdentBox.cs:
 	* ZincIdentBoxBase.cs:
 	* ZincIdentContainer.cs:
